Update parsing of output files for qpWave/qpAdm

--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -575,6 +575,28 @@ that the qpAdm estimates are very close to what we got earlier.
 
 
 
+## qpWave
+
+
+From Haak et al.:
+
+first testing a pair of source populations (left list U) to ensure that they
+have rank=1 with respect to the outgroups, which shows that they are descended
+from two independent streams of ancestry. We will then add a third population
+Test, making U={U, Test}, showing that it does not increase the rank, and can
+thus be modelled as a mixture of the initial pair.
+
+```{r}
+qpWave(left = c("French", "Sardinian", "Han", "Papuan"),
+       right = c("Mbuti", "Yoruba", "Dinka"),
+       data = snps)
+```
+
+
+
+
+
+
 ## Grouping population labels
 
 What we've been doing so far was calculating statistics for individual samples.
