--- a/README.Rmd
+++ b/README.Rmd
@@ -43,7 +43,7 @@ ADMIXTOOLS programs, allowing users to focus on the analysis itself.
 
 ## Installation instructions
 
-**Note (2018/09/06):** This package is currently in the last phase of testing
+**Note (2018/10/22):** This package is currently in the last phase of testing
 and polishing the API before I submit it to [CRAN](https://cran.r-project.org).
 You can definitely safely use it for your own work, but please make sure to
 check back here for instructions on how to install the officially released
@@ -53,10 +53,13 @@ if you want to stay updated.
 To install `admixr` from Github you need to install the package `devtools`
 first. You can simply run:
 
-```{r libraries, eval = FALSE}
+```{r installation, eval = FALSE}
 install.packages("devtools")
 devtools::install_github("bodkan/admixr")
 ```
+
+If you want to **update** _admixr_ to a newer version, simply run
+`devtools::install_github("bodkan/admixr")` again.
 
 **Note that in order to use the `admixr` package, you need a working
 installation of ADMIXTOOLS!** You can find installation instructions
